# agent-mem0

./: .gitignore  README-en.md  README.md  pyproject.toml
.github/workflows/: e2e.yml  publish.yml  test.yml
src/agent_mem0/: __init__.py  __main__.py  cli.py  config.py  logger.py
src/agent_mem0/installer/: claude_code.py  docker.py  hardware.py  ollama.py  output.py  progress.py  providers.py  qdrant.py  registry.py  setup.py  status.py  uninstall.py  wizard.py
src/agent_mem0/server/: mcp_server.py  timeout.py
src/agent_mem0/templates/: claude_global_memory_rules.md  config.yaml.template
templates/: claude_global_memory_rules.md  config.yaml.template  skill.md
tests/: e2e_test.py
